--- a/monadic-quicksort-verification.cabal
+++ b/monadic-quicksort-verification.cabal
@@ -43,9 +43,8 @@ library
     VTuple,
     VUnit
   build-depends:
-    base >= 4 && < 5,
-    liquidhaskell
-  ghc-options: -Wall -fplugin=LiquidHaskell
+    base >= 4 && < 5
+  ghc-options: -Wall
   default-extensions:
     RankNTypes,
     ScopedTypeVariables,
