Removed dependence on --ple flag

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 SOURCE_DIRECTORY=~/Repositories/oopsla2020-artifact/liquid-benchmark/liquid-base/liquid-base/src
 SOURCE_FILES=$(shell find . -name "*.hs")
-LIQUID_OPTIONS=--reflection --ple --typed-holes --extensionality --higherorder --notermination --diff --prune-unsorted
+LIQUID_OPTIONS=--reflection --ple-local --typed-holes --extensionality --higherorder --notermination --diff --prune-unsorted
 GHC_OPTIONS=--ghc-option=-XExplicitForAll --ghc-option=-XRankNTypes --ghc-option=--XScopedTypeVariables
 
 check:
