--- a/monadic-quicksort-verification.cabal
+++ b/monadic-quicksort-verification.cabal
@@ -42,33 +42,9 @@ library
     liquidhaskell == 0.8.10.2,
     liquid-base,
     liquid-prelude
-  ghc-options: -Wall -Wno-unused-imports -Wno-unused-matches -fplugin=LiquidHaskell -fplugin-opt=LiquidHaskell:--reflection -fplugin-opt=LiquidHaskell:--ple-local -fplugin-opt=LiquidHaskell:--typed-holes -fplugin-opt=LiquidHaskell:--higherorder -fplugin-opt=LiquidHaskell:--notermination -fplugin-opt=LiquidHaskell:--diff -fplugin-opt=LiquidHaskell:--prune-unsorted
+  ghc-options: -Wall -Wno-unused-imports -Wno-unused-matches -Wno-unused-local-binds -fplugin=LiquidHaskell -fplugin-opt=LiquidHaskell:--reflection -fplugin-opt=LiquidHaskell:--ple-local -fplugin-opt=LiquidHaskell:--typed-holes -fplugin-opt=LiquidHaskell:--higherorder -fplugin-opt=LiquidHaskell:--notermination -fplugin-opt=LiquidHaskell:--diff -fplugin-opt=LiquidHaskell:--prune-unsorted
   default-extensions:
     RankNTypes,
     ScopedTypeVariables,
     ExplicitForAll
   default-language: Haskell2010
-
-
--- library
---   hs-source-dirs: src
---     exposed-modules:
---       Test
---     -- other-modules:
---     build-depends:
---       base >=4.9 && <4.10,
---       liquidhaskell
---     ghc-options: -Wall -fplugin=LiquidHaskell
---     default-language: Haskell2010
-
-
--- executable monadic-quicksort-verification
---   main-is:
---     Main.hs
---   -- other-modules:
---   -- other-extensions:
---   build-depends:
---     base >=4.14 && <4.15
---   -- hs-source-dirs:
---   default-language:
---     Haskell2010
