proved vbind_monotonic_refinement

--- a/monadic-quicksort-verification.cabal
+++ b/monadic-quicksort-verification.cabal
@@ -18,11 +18,12 @@ library
   hs-source-dirs: src
   exposed-modules:
     Function,
-    PartitionArray,
-    QuickSortArray,
-    QuickSortList,
+    -- PartitionArray,
+    -- QuickSortArray,
+    -- QuickSortList,
     Relation,
-    SlowSortList,
+    -- SlowSortList,
+    -- Test
     VBool,
     VFunctor,
     VGroup,
@@ -42,7 +43,7 @@ library
     liquidhaskell == 0.8.10.2,
     liquid-base,
     liquid-prelude
-  ghc-options: -Wall -Wno-unused-imports -Wno-unused-matches -Wno-unused-local-binds -fplugin=LiquidHaskell -fplugin-opt=LiquidHaskell:--reflection -fplugin-opt=LiquidHaskell:--ple-local -fplugin-opt=LiquidHaskell:--typed-holes -fplugin-opt=LiquidHaskell:--higherorder -fplugin-opt=LiquidHaskell:--notermination -fplugin-opt=LiquidHaskell:--diff -fplugin-opt=LiquidHaskell:--prune-unsorted
+  ghc-options: -Wall -Wno-unused-imports -Wno-unused-matches -Wno-unused-local-binds -fplugin=LiquidHaskell -fplugin-opt=LiquidHaskell:--reflection -fplugin-opt=LiquidHaskell:--ple-local -fplugin-opt=LiquidHaskell:--typed-holes -fplugin-opt=LiquidHaskell:--higherorder -fplugin-opt=LiquidHaskell:--diff -fplugin-opt=LiquidHaskell:--prune-unsorted -fplugin-opt=LiquidHaskell:--short-names
   default-extensions:
     RankNTypes,
     ScopedTypeVariables,
