implemented basic Plus monad

--- a/monadic-quicksort-verification.cabal
+++ b/monadic-quicksort-verification.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 47e975eb9f369673346d7f51dd9bf6757dab589811ef02d4f5251f303dfab76f
+-- hash: 4339e7e5543ab77a9636f3b244e8779f1bf4b3d4497c879d8a58d6631132a3fc
 
 name:           monadic-quicksort-verification
 version:        0.1.0.0
@@ -26,6 +26,8 @@ source-repository head
 
 library
   exposed-modules:
+      Control.Monad.Array.Refined
+      Control.Monad.Plus.Refined
       Control.Monad.Refined
       Function
       Relation.Equality.Prop
