--- a/monadic-quicksort-verification.cabal
+++ b/monadic-quicksort-verification.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: d03565d1195a1116fc6f627215e0cd191f06fdb0a9c525364c06d2e43c644900
+-- hash: 6c4a02bd473d21978078d6e1b85c71dc8db53322c960e2b94547568607a4f1a9
 
 name:           monadic-quicksort-verification
 version:        0.1.0.0
@@ -35,6 +35,7 @@ library
       Language.Haskell.Liquid.Equational
       Language.Haskell.Liquid.ProofCombinators
       Relation.Equality.Prop
+      Relation.Equality.PropOld
   other-modules:
       Paths_monadic_quicksort_verification
   hs-source-dirs:
@@ -50,6 +51,7 @@ test-suite monadic-quicksort-verification-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Reader
       Paths_monadic_quicksort_verification
   hs-source-dirs:
       test
