--- a/package.yaml
+++ b/package.yaml
@@ -25,7 +25,7 @@ dependencies:
   # - base >= 4.7 && < 5
   - liquidhaskell == 0.8.10.2
   - liquid-base
-  # - liquid-prelude
+  - liquid-prelude
 
 library:
   source-dirs: src
