working on divide_and_conquer_lemma2

--- a/package.yaml
+++ b/package.yaml
@@ -44,6 +44,7 @@ library:
     - LambdaCase
     - MultiWayIf
     - TupleSections
+    - ScopedTypeVariables
   ghc-options:
     - -Wall
     - -Wno-name-shadowing
