--- a/monadic-quicksort-verification.cabal
+++ b/monadic-quicksort-verification.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: cc6a17dab71a9f39b4924541c07c1e6cee0bafb3ac0a64ee43f74ab110e606e4
+-- hash: 60c0271d20895848bbf71b657f6af0882f47472793a404ea7f9698d7ac25265c
 
 name:           monadic-quicksort-verification
 version:        0.1.0.0
@@ -30,7 +30,7 @@ library
       Control.Refined.Monad
       Control.Refined.Monad.Array
       Control.Refined.Monad.Plus
-      Control.Refined.SlowsortList
+      Control.Refined.Sort
       Data.Refined.List
       Data.Refined.Nat
       Data.Refined.Natural
@@ -49,7 +49,7 @@ library
       Paths_monadic_quicksort_verification
   hs-source-dirs:
       src
-  default-extensions: GADTs KindSignatures ExplicitForAll RankNTypes FlexibleInstances UndecidableInstances MultiParamTypeClasses ScopedTypeVariables LambdaCase MultiWayIf TupleSections
+  default-extensions: GADTs KindSignatures ExplicitForAll RankNTypes FlexibleInstances UndecidableInstances MultiParamTypeClasses ScopedTypeVariables LambdaCase MultiWayIf TupleSections ScopedTypeVariables
   ghc-options: -Wall -Wno-name-shadowing -Wno-unused-imports -Wno-unused-matches -Wno-unused-local-binds -Wno-orphans -fplugin=LiquidHaskell -fplugin-opt=LiquidHaskell:--reflection -fplugin-opt=LiquidHaskell:--ple-local -fplugin-opt=LiquidHaskell:--diff -fplugin-opt=LiquidHaskell:--short-names -fplugin-opt=LiquidHaskell:--prune-unsorted -fplugin-opt=LiquidHaskell:--short-errors
   build-depends:
       haskell-src-meta
