--- a/package.yaml
+++ b/package.yaml
@@ -29,6 +29,8 @@ dependencies:
   - template-haskell
   - haskell-src-meta
   - parsec
+  - neat-interpolation
+  - text
 
 library:
   source-dirs: src
