--- a/propositional-equality/propositional-equality.cabal
+++ b/propositional-equality/propositional-equality.cabal
@@ -28,3 +28,21 @@ library
     , template-haskell
     , haskell-src-meta
   default-language: Haskell2010
+
+
+  test-suite test
+  type: exitcode-stdio-1.0
+  main-is: Test.hs
+  other-modules:
+      Unsoundness
+--       Reverse
+--       RefinedDomains
+--       Map
+--       Folds
+--       RunTimeCheck
+--       Readers
+--       Endofunctors
+  hs-source-dirs:
+      test
+  ghc-options: -fplugin=LiquidHaskell -fplugin-opt=LiquidHaskell:--reflection -fplugin-opt=LiquidHaskell:--ple-local 
+  default-language: Haskell2010
