--- a/propositional-equality/propositional-equality.cabal
+++ b/propositional-equality/propositional-equality.cabal
@@ -36,7 +36,7 @@ test-suite test
   other-modules:
       Unsoundness
       Reverse
---       RefinedDomains
+      RefinedDomains
 --       Map
 --       Folds
        RunTimeCheck
