--- a/propositional-equality/propositional-equality.cabal
+++ b/propositional-equality/propositional-equality.cabal
@@ -37,7 +37,7 @@ test-suite test
       Unsoundness
       Reverse
       RefinedDomains
---       Map
+      Map
 --       Folds
        RunTimeCheck
 --       Readers
