pass over inconsistency

--- a/propositional-equality/propositional-equality.cabal
+++ b/propositional-equality/propositional-equality.cabal
@@ -34,7 +34,7 @@ test-suite test
   type: exitcode-stdio-1.0
   main-is: Test.hs
   other-modules:
-      Unsoundness
+      Inconsistency
       Reverse
       RefinedDomains
       Map
