--- a/propositional-equality/propositional-equality.cabal
+++ b/propositional-equality/propositional-equality.cabal
@@ -15,7 +15,7 @@ library
       Relation.Equality.Prop.Reasoning
       Data.Refined.Constant
       Data.Refined.Unit
-      Function 
+      Function
   hs-source-dirs:
       src
   default-extensions: TupleSections MultiWayIf LambdaCase GADTs KindSignatures ExplicitForAll RankNTypes FlexibleInstances UndecidableInstances MultiParamTypeClasses
@@ -51,4 +51,5 @@ test-suite test
     , liquidhaskell
     , liquid-prelude
     , propositional-equality
+    , template-haskell
   default-language: Haskell2010
